# mcp_servers_showcase

./: LICENSE  README.md  pyproject.toml
.cursor/rules/: database-server-rules.mdc  deployment-guide.mdc  file-server-rules.mdc  global-standards.mdc  python_mcp_servers.mdc  troubleshooting.mdc
docs/: QUICK_START.md
examples/db-server/: main.py
examples/file-server/: main.py
